prototypes/egress-gateway-control-plane/config/samples/egress-tls.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-egress-tls-route
  namespace: default
spec:
  parentRefs:
  - name: egress-tls
    kind: EgressGateway
    group: ainetworking.prototype.x-k8s.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/get"
    backendRefs:
    - name: httpbin-tls-backend
      kind: Backend
      group: ainetworking.prototype.x-k8s.io
      port: 443
